# bondcli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  i18n.rs  interactive.rs  lib.rs  main.rs
src/bond/: config.rs  manager.rs  mod.rs  validator.rs
src/net/: interface.rs  mod.rs  service.rs  validator.rs
src/utils/: backup.rs  fs.rs  logger.rs  mod.rs
tests/integration/: cli_test.rs
tests/unit/: backup_test.rs  bond_config_test.rs  cidr_test.rs
