[package]
name = "bondcli"
version = "1.0.0"
edition = "2021"
authors = ["bondcli developers"]
description = "Linux Bonding Configuration Tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xxx/bondcli"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
nix = { version = "0.27", features = ["fs", "user"] }
colored = "2.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
